cursive-bootstrap/tests/ui/E-CON/E-CON-0031.cursive
// RUN: compile-fail
// DIAG: E-CON-0031
// SPEC: 8.9
// DESC: # block path not in scope

record Counter {
    value: i32
}

procedure bad_scope() -> () {
    # write undefined {  //~ ERROR E-CON-0031: # block path not in scope
        let x: i32 = 0
    }
}

public procedure main(move ctx: Context) -> i32 {
    return 0
}
